--- a/installCheck.ipynb
+++ b/installCheck.ipynb
@@ -304,15 +304,103 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "outputs": [],
+   "execution_count": 1,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "ALLUSERSPROFILE: C:\\ProgramData\n",
+      "APPDATA: C:\\Users\\overvelj\\AppData\\Roaming\n",
+      "COMMONPROGRAMFILES: C:\\Program Files\\Common Files\n",
+      "COMMONPROGRAMFILES(X86): C:\\Program Files (x86)\\Common Files\n",
+      "COMMONPROGRAMW6432: C:\\Program Files\\Common Files\n",
+      "COMPUTERNAME: AKDGPORT11191\n",
+      "COMSPEC: C:\\WINDOWS\\system32\\cmd.exe\n",
+      "DRIVERDATA: C:\\Windows\\System32\\Drivers\\DriverData\n",
+      "HADOOP_HOME: C:\\DevApps\\winutils\\winutils-master\\hadoop-3.3.1\\\n",
+      "HOMEDRIVE: C:\n",
+      "HOMEPATH: \\Users\\overvelj\n",
+      "IDEA_INITIAL_DIRECTORY: C:\\Users\\overvelj\n",
+      "JAVA_HOME: C:\\Program Files\\Java\\jdk-11.0.8\\\n",
+      "LANG: en_US.UTF-8\n",
+      "LANGUAGE: \n",
+      "LC_ALL: en_US.UTF-8\n",
+      "LOCALAPPDATA: C:\\Users\\overvelj\\AppData\\Local\n",
+      "LOGONSERVER: \\\\CDCDCADM02\n",
+      "NUMBER_OF_PROCESSORS: 8\n",
+      "ONEDRIVE: C:\\Users\\overvelj\\OneDrive - Karel de Grote Hogeschool\n",
+      "ONEDRIVECOMMERCIAL: C:\\Users\\overvelj\\OneDrive - Karel de Grote Hogeschool\n",
+      "OS: Windows_NT\n",
+      "PATH: C:\\DevApps\\DeltaSpark\\Scripts;C:\\Program Files (x86)\\Common Files\\Oracle\\Java\\javapath;C:\\Users\\overvelj\\AppData\\Local\\Programs\\Python\\Python39;C:\\Program Files\\Java\\jdk-11.0.8\\\\bin;C:\\Program Files\\Common Files\\Oracle\\Java\\javapathREMOVE;C:\\Program Files (x86)\\Common Files\\Oracle\\Java\\javapathREMOVE;C:\\WINDOWS\\system32;C:\\WINDOWS;C:\\WINDOWS\\System32\\Wbem;C:\\WINDOWS\\System32\\WindowsPowerShell\\v1.0\\;C:\\WINDOWS\\System32\\OpenSSH\\;C:\\Program Files (x86)\\Microsoft SQL Server\\150\\DTS\\Binn\\;C:\\Program Files\\dotnet\\;C:\\Program Files\\Azure Data Studio\\bin;C:\\Program Files\\Docker\\Docker\\resources\\bin;C:\\ProgramData\\DockerDesktop\\version-bin;C:\\Program Files\\Graphviz\\bin;C:\\Program Files\\mongosh\\;C:\\Program Files\\MongoDB\\Server\\5.0\\bin;C:\\DevApps\\VENV309_DS2\\\\Scripts;C:\\Program Files\\Microsoft SQL Server\\Client SDK\\ODBC\\170\\Tools\\Binn\\;C:\\DevApps\\gradle-7.6\\bin;C:\\DevApps\\spark-3.3.2-bin-hadoop3\\\\bin;C:\\DevApps\\winutils\\winutils-master\\hadoop-3.3.1\\\\bin;C:\\Program Files\\Git\\cmd;C:\\Program Files\\Amazon\\AWSCLIV2\\;C:\\Users\\overvelj\\AppData\\Local\\Programs\\Python\\Python310_9\\Scripts\\;C:\\Users\\overvelj\\AppData\\Local\\Programs\\Python\\Python310_9\\;C:\\Users\\overvelj\\AppData\\Local\\Microsoft\\WindowsApps;C:\\Users\\overvelj\\.dotnet\\tools;C:\\Users\\overvelj\\AppData\\Local\\Programs\\Microsoft VS Code\\bin;C:\\Users\\overvelj\\AppData\\Local\\Programs\\Git\\cmd;C:\\Users\\overvelj\\AppData\\Local\\JetBrains\\Toolbox\\scripts\n",
+      "PATHEXT: .COM;.EXE;.BAT;.CMD;.VBS;.VBE;.JS;.JSE;.WSF;.WSH;.MSC;.PY;.PYW\n",
+      "PROCESSOR_ARCHITECTURE: AMD64\n",
+      "PROCESSOR_IDENTIFIER: Intel64 Family 6 Model 142 Stepping 12, GenuineIntel\n",
+      "PROCESSOR_LEVEL: 6\n",
+      "PROCESSOR_REVISION: 8e0c\n",
+      "PROGRAMDATA: C:\\ProgramData\n",
+      "PROGRAMFILES: C:\\Program Files\n",
+      "PROGRAMFILES(X86): C:\\Program Files (x86)\n",
+      "PROGRAMW6432: C:\\Program Files\n",
+      "PROMPT: (DeltaSpark) $P$G\n",
+      "PSDISTRICT_BOOTIMAGEVERSION: CCM002C6\n",
+      "PSDISTRICT_DEPLOYMENTID: CCM00B0B\n",
+      "PSDISTRICT_INSTALLATIONDATE: 20200814-15:15:29\n",
+      "PSDISTRICT_INSTALLATIONMETHOD: PXE\n",
+      "PSDISTRICT_OFFICEINSTALL: clicktorun2016\n",
+      "PSDISTRICT_SITECODE: CCM\n",
+      "PSDISTRICT_TAAK: domein\n",
+      "PSDISTRICT_TATTOOSCRIPTVERSION: 1.4.3\n",
+      "PSDISTRICT_TSID: CCM00B0B\n",
+      "PSDISTRICT_TSNAME: KdG_W10_1909_Prod_200612.02\n",
+      "PSDISTRICT_UNATTEND: win10ent64-nl-BE-Admin.xml\n",
+      "PSMODULEPATH: %ProgramFiles%\\WindowsPowerShell\\Modules;C:\\WINDOWS\\system32\\WindowsPowerShell\\v1.0\\Modules\n",
+      "PUBLIC: C:\\Users\\Public\n",
+      "PYSPARK_HADOOP_VERSION: 3\n",
+      "PYTHONPATH: C:\\DevProjects\\Databricks\n",
+      "SESSIONNAME: Console\n",
+      "SPARK_HOME: C:\\DevApps\\spark-3.3.2-bin-hadoop3\\\n",
+      "SYSTEMDRIVE: C:\n",
+      "SYSTEMROOT: C:\\WINDOWS\n",
+      "TEMP: C:\\Users\\overvelj\\AppData\\Local\\Temp\n",
+      "TMP: C:\\Users\\overvelj\\AppData\\Local\\Temp\n",
+      "TOOLBOX_VERSION: 1.27.3.14493\n",
+      "UATDATA: C:\\WINDOWS\\CCM\\UATData\\D9F8C395-CAB8-491d-B8AC-179A1FE1BE77\n",
+      "USERDNSDOMAIN: ADMIN.KDG.BE\n",
+      "USERDOMAIN: ADMIN\n",
+      "USERDOMAIN_ROAMINGPROFILE: ADMIN\n",
+      "USERNAME: overvelj\n",
+      "USERPROFILE: C:\\Users\\overvelj\n",
+      "VIRTUAL_ENV: C:\\DevApps\\DeltaSpark\n",
+      "WINDIR: C:\\WINDOWS\n",
+      "ZES_ENABLE_SYSMAN: 1\n",
+      "_OLD_VIRTUAL_PATH: C:\\Program Files (x86)\\Common Files\\Oracle\\Java\\javapath;C:\\Users\\overvelj\\AppData\\Local\\Programs\\Python\\Python39;C:\\Program Files\\Java\\jdk-11.0.8\\\\bin;C:\\Program Files\\Common Files\\Oracle\\Java\\javapathREMOVE;C:\\Program Files (x86)\\Common Files\\Oracle\\Java\\javapathREMOVE;C:\\WINDOWS\\system32;C:\\WINDOWS;C:\\WINDOWS\\System32\\Wbem;C:\\WINDOWS\\System32\\WindowsPowerShell\\v1.0\\;C:\\WINDOWS\\System32\\OpenSSH\\;C:\\Program Files (x86)\\Microsoft SQL Server\\150\\DTS\\Binn\\;C:\\Program Files\\dotnet\\;C:\\Program Files\\Azure Data Studio\\bin;C:\\Program Files\\Docker\\Docker\\resources\\bin;C:\\ProgramData\\DockerDesktop\\version-bin;C:\\Program Files\\Graphviz\\bin;C:\\Program Files\\mongosh\\;C:\\Program Files\\MongoDB\\Server\\5.0\\bin;C:\\DevApps\\VENV309_DS2\\\\Scripts;C:\\Program Files\\Microsoft SQL Server\\Client SDK\\ODBC\\170\\Tools\\Binn\\;C:\\DevApps\\gradle-7.6\\bin;C:\\DevApps\\spark-3.3.2-bin-hadoop3\\\\bin;C:\\DevApps\\winutils\\winutils-master\\hadoop-3.3.1\\\\bin;C:\\Program Files\\Git\\cmd;C:\\Program Files\\Amazon\\AWSCLIV2\\;C:\\Users\\overvelj\\AppData\\Local\\Programs\\Python\\Python310_9\\Scripts\\;C:\\Users\\overvelj\\AppData\\Local\\Programs\\Python\\Python310_9\\;C:\\Users\\overvelj\\AppData\\Local\\Microsoft\\WindowsApps;C:\\Users\\overvelj\\.dotnet\\tools;C:\\Users\\overvelj\\AppData\\Local\\Programs\\Microsoft VS Code\\bin;C:\\Users\\overvelj\\AppData\\Local\\Programs\\Git\\cmd;C:\\Users\\overvelj\\AppData\\Local\\JetBrains\\Toolbox\\scripts\n",
+      "_OLD_VIRTUAL_PROMPT: $P$G\n",
+      "PYDEVD_USE_FRAME_EVAL: NO\n",
+      "JPY_INTERRUPT_EVENT: 1340\n",
+      "IPY_INTERRUPT_EVENT: 1340\n",
+      "JPY_PARENT_PID: 1344\n",
+      "TERM: xterm-color\n",
+      "CLICOLOR: 1\n",
+      "FORCE_COLOR: 1\n",
+      "CLICOLOR_FORCE: 1\n",
+      "PAGER: cat\n",
+      "GIT_PAGER: cat\n",
+      "MPLBACKEND: module://matplotlib_inline.backend_inline\n"
+     ]
+    }
+   ],
    "source": [
     "import os\n",
     "for key, value in os.environ.items():\n",
     "    print(f'{key}: {value}')"
    ],
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "ExecuteTime": {
+     "start_time": "2023-04-17T13:58:41.696435Z",
+     "end_time": "2023-04-17T13:58:41.719435Z"
+    }
    }
   }
  ],
