Changed sequence in README.md

--- a/installCheck.ipynb
+++ b/installCheck.ipynb
@@ -17,9 +17,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 1,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "ExecuteTime": {
+     "start_time": "2023-04-18T21:08:10.435229Z",
+     "end_time": "2023-04-18T21:08:12.721181Z"
+    }
    },
    "outputs": [],
    "source": [
@@ -40,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 2,
    "outputs": [],
    "source": [
     "builder = SparkSession.builder \\\n",
@@ -53,7 +57,11 @@
     "builder = configure_spark_with_delta_pip(builder)"
    ],
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "ExecuteTime": {
+     "start_time": "2023-04-18T21:08:12.711153Z",
+     "end_time": "2023-04-18T21:08:12.731151Z"
+    }
    }
   },
   {
@@ -73,13 +81,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 3,
    "outputs": [],
    "source": [
     "spark = builder.getOrCreate()\n"
    ],
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "ExecuteTime": {
+     "start_time": "2023-04-18T21:08:12.711153Z",
+     "end_time": "2023-04-18T21:09:03.359244Z"
+    }
    }
   },
   {
@@ -101,14 +113,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 4,
    "outputs": [
     {
      "data": {
-      "text/plain": "<pyspark.sql.session.SparkSession at 0x1daf28abe50>",
-      "text/html": "\n            <div>\n                <p><b>SparkSession - in-memory</b></p>\n                \n        <div>\n            <p><b>SparkContext</b></p>\n\n            <p><a href=\"http://host.docker.internal:4041\">Spark UI</a></p>\n\n            <dl>\n              <dt>Version</dt>\n                <dd><code>v3.3.2</code></dd>\n              <dt>Master</dt>\n                <dd><code>local[*]</code></dd>\n              <dt>AppName</dt>\n                <dd><code>DimDate</code></dd>\n            </dl>\n        </div>\n        \n            </div>\n        "
+      "text/plain": "<pyspark.sql.session.SparkSession at 0x1bc3db9e910>",
+      "text/html": "\n            <div>\n                <p><b>SparkSession - in-memory</b></p>\n                \n        <div>\n            <p><b>SparkContext</b></p>\n\n            <p><a href=\"http://host.docker.internal:4040\">Spark UI</a></p>\n\n            <dl>\n              <dt>Version</dt>\n                <dd><code>v3.3.2</code></dd>\n              <dt>Master</dt>\n                <dd><code>local[*]</code></dd>\n              <dt>AppName</dt>\n                <dd><code>DimDate</code></dd>\n            </dl>\n        </div>\n        \n            </div>\n        "
      },
-     "execution_count": 65,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -117,7 +129,11 @@
     "builder.getOrCreate()\n"
    ],
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "ExecuteTime": {
+     "start_time": "2023-04-18T21:09:03.372231Z",
+     "end_time": "2023-04-18T21:09:08.112713Z"
+    }
    }
   },
   {
@@ -134,7 +150,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 5,
    "outputs": [
     {
      "name": "stdout",
@@ -172,7 +188,7 @@
      "data": {
       "text/plain": "DataFrame[summary: string, value: string]"
      },
-     "execution_count": 66,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -189,7 +205,11 @@
     "df.describe()"
    ],
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "ExecuteTime": {
+     "start_time": "2023-04-18T21:09:08.123710Z",
+     "end_time": "2023-04-18T21:09:34.990241Z"
+    }
    }
   },
   {
@@ -204,7 +224,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 6,
    "outputs": [
     {
      "name": "stdout",
@@ -246,7 +266,11 @@
     "lowerwords.show()\n"
    ],
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "ExecuteTime": {
+     "start_time": "2023-04-18T21:09:34.994246Z",
+     "end_time": "2023-04-18T21:09:43.363651Z"
+    }
    }
   },
   {
@@ -267,13 +291,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 7,
    "outputs": [
     {
      "data": {
       "text/plain": "DataFrame[summary: string, word: string, amount: string]"
      },
-     "execution_count": 71,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -289,7 +313,11 @@
     "lowerwords.write.format(\"delta\").mode(\"overwrite\").saveAsTable(permanent_table_name)"
    ],
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "ExecuteTime": {
+     "start_time": "2023-04-18T21:09:43.367646Z",
+     "end_time": "2023-04-18T21:10:21.844149Z"
+    }
    }
   },
   {
@@ -304,7 +332,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 8,
    "outputs": [
     {
      "name": "stdout",
@@ -318,10 +346,12 @@
       "COMPUTERNAME: AKDGPORT11191\n",
       "COMSPEC: C:\\WINDOWS\\system32\\cmd.exe\n",
       "DRIVERDATA: C:\\Windows\\System32\\Drivers\\DriverData\n",
+      "FPS_BROWSER_APP_PROFILE_STRING: Internet Explorer\n",
+      "FPS_BROWSER_USER_PROFILE_STRING: Default\n",
       "HADOOP_HOME: C:\\DevApps\\winutils\\winutils-master\\hadoop-3.3.1\\\n",
       "HOMEDRIVE: C:\n",
       "HOMEPATH: \\Users\\overvelj\n",
-      "IDEA_INITIAL_DIRECTORY: C:\\Users\\overvelj\n",
+      "IDEA_INITIAL_DIRECTORY: C:\\WINDOWS\\system32\n",
       "JAVA_HOME: C:\\Program Files\\Java\\jdk-11.0.8\\\n",
       "LANG: en_US.UTF-8\n",
       "LANGUAGE: \n",
@@ -332,7 +362,7 @@
       "ONEDRIVE: C:\\Users\\overvelj\\OneDrive - Karel de Grote Hogeschool\n",
       "ONEDRIVECOMMERCIAL: C:\\Users\\overvelj\\OneDrive - Karel de Grote Hogeschool\n",
       "OS: Windows_NT\n",
-      "PATH: C:\\DevApps\\DeltaSpark\\Scripts;C:\\Program Files (x86)\\Common Files\\Oracle\\Java\\javapath;C:\\Users\\overvelj\\AppData\\Local\\Programs\\Python\\Python39;C:\\Program Files\\Java\\jdk-11.0.8\\\\bin;C:\\Program Files\\Common Files\\Oracle\\Java\\javapathREMOVE;C:\\Program Files (x86)\\Common Files\\Oracle\\Java\\javapathREMOVE;C:\\WINDOWS\\system32;C:\\WINDOWS;C:\\WINDOWS\\System32\\Wbem;C:\\WINDOWS\\System32\\WindowsPowerShell\\v1.0\\;C:\\WINDOWS\\System32\\OpenSSH\\;C:\\Program Files (x86)\\Microsoft SQL Server\\150\\DTS\\Binn\\;C:\\Program Files\\dotnet\\;C:\\Program Files\\Azure Data Studio\\bin;C:\\Program Files\\Docker\\Docker\\resources\\bin;C:\\ProgramData\\DockerDesktop\\version-bin;C:\\Program Files\\Graphviz\\bin;C:\\Program Files\\mongosh\\;C:\\Program Files\\MongoDB\\Server\\5.0\\bin;C:\\DevApps\\VENV309_DS2\\\\Scripts;C:\\Program Files\\Microsoft SQL Server\\Client SDK\\ODBC\\170\\Tools\\Binn\\;C:\\DevApps\\gradle-7.6\\bin;C:\\DevApps\\spark-3.3.2-bin-hadoop3\\\\bin;C:\\DevApps\\winutils\\winutils-master\\hadoop-3.3.1\\\\bin;C:\\Program Files\\Git\\cmd;C:\\Program Files\\Amazon\\AWSCLIV2\\;C:\\Users\\overvelj\\AppData\\Local\\Programs\\Python\\Python310_9\\Scripts\\;C:\\Users\\overvelj\\AppData\\Local\\Programs\\Python\\Python310_9\\;C:\\Users\\overvelj\\AppData\\Local\\Microsoft\\WindowsApps;C:\\Users\\overvelj\\.dotnet\\tools;C:\\Users\\overvelj\\AppData\\Local\\Programs\\Microsoft VS Code\\bin;C:\\Users\\overvelj\\AppData\\Local\\Programs\\Git\\cmd;C:\\Users\\overvelj\\AppData\\Local\\JetBrains\\Toolbox\\scripts\n",
+      "PATH: C:\\DevApps\\DeltaSpark\\Scripts;C:\\Program Files (x86)\\Common Files\\Oracle\\Java\\javapath;C:\\Users\\overvelj\\AppData\\Local\\Programs\\Python\\Python39;C:\\Program Files\\Java\\jdk-11.0.8\\\\bin;C:\\Program Files\\Common Files\\Oracle\\Java\\javapathREMOVE;C:\\Program Files (x86)\\Common Files\\Oracle\\Java\\javapathREMOVE;C:\\WINDOWS\\system32;C:\\WINDOWS;C:\\WINDOWS\\System32\\Wbem;C:\\WINDOWS\\System32\\WindowsPowerShell\\v1.0\\;C:\\WINDOWS\\System32\\OpenSSH\\;C:\\Program Files (x86)\\Microsoft SQL Server\\150\\DTS\\Binn\\;C:\\Program Files\\dotnet\\;C:\\Program Files\\Azure Data Studio\\bin;C:\\Program Files\\Docker\\Docker\\resources\\bin;C:\\ProgramData\\DockerDesktop\\version-bin;C:\\Program Files\\Graphviz\\bin;C:\\Program Files\\mongosh\\;C:\\Program Files\\MongoDB\\Server\\5.0\\bin;C:\\DevApps\\VENV309_DS2\\\\Scripts;C:\\Program Files\\Microsoft SQL Server\\Client SDK\\ODBC\\170\\Tools\\Binn\\;C:\\DevApps\\gradle-7.6\\bin;C:\\DevApps\\spark-3.3.2-bin-hadoop3\\\\bin;C:\\DevApps\\winutils\\winutils-master\\hadoop-3.3.1\\\\bin;C:\\Program Files\\Git\\cmd;C:\\Program Files\\Amazon\\AWSCLIV2\\;C:\\Users\\overvelj\\AppData\\Local\\Programs\\Python\\Python310_9\\Scripts\\;C:\\Users\\overvelj\\AppData\\Local\\Programs\\Python\\Python310_9\\;C:\\Users\\overvelj\\AppData\\Local\\Microsoft\\WindowsApps;C:\\Users\\overvelj\\.dotnet\\tools;C:\\Users\\overvelj\\AppData\\Local\\Programs\\Microsoft VS Code\\bin;C:\\Users\\overvelj\\AppData\\Local\\Programs\\Git\\cmd;C:\\Program Files\\mongosh\\;C:\\Users\\overvelj\\AppData\\Local\\JetBrains\\Toolbox\\scripts\n",
       "PATHEXT: .COM;.EXE;.BAT;.CMD;.VBS;.VBE;.JS;.JSE;.WSF;.WSH;.MSC;.PY;.PYW\n",
       "PROCESSOR_ARCHITECTURE: AMD64\n",
       "PROCESSOR_IDENTIFIER: Intel64 Family 6 Model 142 Stepping 12, GenuineIntel\n",
@@ -354,7 +384,7 @@
       "PSDISTRICT_TSID: CCM00B0B\n",
       "PSDISTRICT_TSNAME: KdG_W10_1909_Prod_200612.02\n",
       "PSDISTRICT_UNATTEND: win10ent64-nl-BE-Admin.xml\n",
-      "PSMODULEPATH: %ProgramFiles%\\WindowsPowerShell\\Modules;C:\\WINDOWS\\system32\\WindowsPowerShell\\v1.0\\Modules\n",
+      "PSMODULEPATH: C:\\Program Files\\WindowsPowerShell\\Modules;C:\\WINDOWS\\system32\\WindowsPowerShell\\v1.0\\Modules\n",
       "PUBLIC: C:\\Users\\Public\n",
       "PYSPARK_HADOOP_VERSION: 3\n",
       "PYTHONPATH: C:\\DevProjects\\Databricks\n",
@@ -364,7 +394,6 @@
       "SYSTEMROOT: C:\\WINDOWS\n",
       "TEMP: C:\\Users\\overvelj\\AppData\\Local\\Temp\n",
       "TMP: C:\\Users\\overvelj\\AppData\\Local\\Temp\n",
-      "TOOLBOX_VERSION: 1.27.3.14493\n",
       "UATDATA: C:\\WINDOWS\\CCM\\UATData\\D9F8C395-CAB8-491d-B8AC-179A1FE1BE77\n",
       "USERDNSDOMAIN: ADMIN.KDG.BE\n",
       "USERDOMAIN: ADMIN\n",
@@ -374,19 +403,21 @@
       "VIRTUAL_ENV: C:\\DevApps\\DeltaSpark\n",
       "WINDIR: C:\\WINDOWS\n",
       "ZES_ENABLE_SYSMAN: 1\n",
-      "_OLD_VIRTUAL_PATH: C:\\Program Files (x86)\\Common Files\\Oracle\\Java\\javapath;C:\\Users\\overvelj\\AppData\\Local\\Programs\\Python\\Python39;C:\\Program Files\\Java\\jdk-11.0.8\\\\bin;C:\\Program Files\\Common Files\\Oracle\\Java\\javapathREMOVE;C:\\Program Files (x86)\\Common Files\\Oracle\\Java\\javapathREMOVE;C:\\WINDOWS\\system32;C:\\WINDOWS;C:\\WINDOWS\\System32\\Wbem;C:\\WINDOWS\\System32\\WindowsPowerShell\\v1.0\\;C:\\WINDOWS\\System32\\OpenSSH\\;C:\\Program Files (x86)\\Microsoft SQL Server\\150\\DTS\\Binn\\;C:\\Program Files\\dotnet\\;C:\\Program Files\\Azure Data Studio\\bin;C:\\Program Files\\Docker\\Docker\\resources\\bin;C:\\ProgramData\\DockerDesktop\\version-bin;C:\\Program Files\\Graphviz\\bin;C:\\Program Files\\mongosh\\;C:\\Program Files\\MongoDB\\Server\\5.0\\bin;C:\\DevApps\\VENV309_DS2\\\\Scripts;C:\\Program Files\\Microsoft SQL Server\\Client SDK\\ODBC\\170\\Tools\\Binn\\;C:\\DevApps\\gradle-7.6\\bin;C:\\DevApps\\spark-3.3.2-bin-hadoop3\\\\bin;C:\\DevApps\\winutils\\winutils-master\\hadoop-3.3.1\\\\bin;C:\\Program Files\\Git\\cmd;C:\\Program Files\\Amazon\\AWSCLIV2\\;C:\\Users\\overvelj\\AppData\\Local\\Programs\\Python\\Python310_9\\Scripts\\;C:\\Users\\overvelj\\AppData\\Local\\Programs\\Python\\Python310_9\\;C:\\Users\\overvelj\\AppData\\Local\\Microsoft\\WindowsApps;C:\\Users\\overvelj\\.dotnet\\tools;C:\\Users\\overvelj\\AppData\\Local\\Programs\\Microsoft VS Code\\bin;C:\\Users\\overvelj\\AppData\\Local\\Programs\\Git\\cmd;C:\\Users\\overvelj\\AppData\\Local\\JetBrains\\Toolbox\\scripts\n",
+      "_OLD_VIRTUAL_PATH: C:\\Program Files (x86)\\Common Files\\Oracle\\Java\\javapath;C:\\Users\\overvelj\\AppData\\Local\\Programs\\Python\\Python39;C:\\Program Files\\Java\\jdk-11.0.8\\\\bin;C:\\Program Files\\Common Files\\Oracle\\Java\\javapathREMOVE;C:\\Program Files (x86)\\Common Files\\Oracle\\Java\\javapathREMOVE;C:\\WINDOWS\\system32;C:\\WINDOWS;C:\\WINDOWS\\System32\\Wbem;C:\\WINDOWS\\System32\\WindowsPowerShell\\v1.0\\;C:\\WINDOWS\\System32\\OpenSSH\\;C:\\Program Files (x86)\\Microsoft SQL Server\\150\\DTS\\Binn\\;C:\\Program Files\\dotnet\\;C:\\Program Files\\Azure Data Studio\\bin;C:\\Program Files\\Docker\\Docker\\resources\\bin;C:\\ProgramData\\DockerDesktop\\version-bin;C:\\Program Files\\Graphviz\\bin;C:\\Program Files\\mongosh\\;C:\\Program Files\\MongoDB\\Server\\5.0\\bin;C:\\DevApps\\VENV309_DS2\\\\Scripts;C:\\Program Files\\Microsoft SQL Server\\Client SDK\\ODBC\\170\\Tools\\Binn\\;C:\\DevApps\\gradle-7.6\\bin;C:\\DevApps\\spark-3.3.2-bin-hadoop3\\\\bin;C:\\DevApps\\winutils\\winutils-master\\hadoop-3.3.1\\\\bin;C:\\Program Files\\Git\\cmd;C:\\Program Files\\Amazon\\AWSCLIV2\\;C:\\Users\\overvelj\\AppData\\Local\\Programs\\Python\\Python310_9\\Scripts\\;C:\\Users\\overvelj\\AppData\\Local\\Programs\\Python\\Python310_9\\;C:\\Users\\overvelj\\AppData\\Local\\Microsoft\\WindowsApps;C:\\Users\\overvelj\\.dotnet\\tools;C:\\Users\\overvelj\\AppData\\Local\\Programs\\Microsoft VS Code\\bin;C:\\Users\\overvelj\\AppData\\Local\\Programs\\Git\\cmd;C:\\Program Files\\mongosh\\;C:\\Users\\overvelj\\AppData\\Local\\JetBrains\\Toolbox\\scripts\n",
       "_OLD_VIRTUAL_PROMPT: $P$G\n",
       "PYDEVD_USE_FRAME_EVAL: NO\n",
-      "JPY_INTERRUPT_EVENT: 1340\n",
-      "IPY_INTERRUPT_EVENT: 1340\n",
-      "JPY_PARENT_PID: 1344\n",
+      "JPY_INTERRUPT_EVENT: 1628\n",
+      "IPY_INTERRUPT_EVENT: 1628\n",
+      "JPY_PARENT_PID: 1648\n",
       "TERM: xterm-color\n",
       "CLICOLOR: 1\n",
       "FORCE_COLOR: 1\n",
       "CLICOLOR_FORCE: 1\n",
       "PAGER: cat\n",
       "GIT_PAGER: cat\n",
-      "MPLBACKEND: module://matplotlib_inline.backend_inline\n"
+      "MPLBACKEND: module://matplotlib_inline.backend_inline\n",
+      "SPARK_AUTH_SOCKET_TIMEOUT: 15\n",
+      "SPARK_BUFFER_SIZE: 65536\n"
      ]
     }
    ],
@@ -398,8 +429,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "start_time": "2023-04-17T13:58:41.696435Z",
-     "end_time": "2023-04-17T13:58:41.719435Z"
+     "start_time": "2023-04-18T21:10:21.846152Z",
+     "end_time": "2023-04-18T21:10:21.868153Z"
     }
    }
   }
