- Structured streaming with Kafka added

--- a/6_kafka.ipynb
+++ b/6_kafka.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "outputs": [],
    "source": [
     "import pyspark\n",
@@ -29,8 +29,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "start_time": "2023-04-26T16:49:09.546435Z",
-     "end_time": "2023-04-26T16:49:09.850359Z"
+     "start_time": "2023-05-16T21:01:49.118414Z",
+     "end_time": "2023-05-16T21:01:49.839861Z"
     }
    }
   },
@@ -46,14 +46,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "outputs": [
     {
      "data": {
-      "text/plain": "<pyspark.sql.session.SparkSession at 0x2357edca760>",
-      "text/html": "\n            <div>\n                <p><b>SparkSession - in-memory</b></p>\n                \n        <div>\n            <p><b>SparkContext</b></p>\n\n            <p><a href=\"http://AKDGPORT11191.admin.kdg.be:4040\">Spark UI</a></p>\n\n            <dl>\n              <dt>Version</dt>\n                <dd><code>v3.3.2</code></dd>\n              <dt>Master</dt>\n                <dd><code>local[*]</code></dd>\n              <dt>AppName</dt>\n                <dd><code>Kafka</code></dd>\n            </dl>\n        </div>\n        \n            </div>\n        "
+      "text/plain": "<pyspark.sql.session.SparkSession at 0x1f792d26700>",
+      "text/html": "\n            <div>\n                <p><b>SparkSession - in-memory</b></p>\n                \n        <div>\n            <p><b>SparkContext</b></p>\n\n            <p><a href=\"http://AKDGPORT11191.mshome.net:4040\">Spark UI</a></p>\n\n            <dl>\n              <dt>Version</dt>\n                <dd><code>v3.3.2</code></dd>\n              <dt>Master</dt>\n                <dd><code>local[*]</code></dd>\n              <dt>AppName</dt>\n                <dd><code>Kafka</code></dd>\n            </dl>\n        </div>\n        \n            </div>\n        "
      },
-     "execution_count": 3,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -82,8 +82,31 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "start_time": "2023-04-26T16:49:09.860443Z",
-     "end_time": "2023-04-26T16:49:32.075646Z"
+     "start_time": "2023-05-16T21:01:51.886776Z",
+     "end_time": "2023-05-16T21:02:19.956364Z"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Vector(spark://AKDGPORT11191.mshome.net:64087/jars/kafka-clients-2.6.0.jar, spark://AKDGPORT11191.mshome.net:64087/jars/commons-pool2-2.6.2.jar, spark://AKDGPORT11191.mshome.net:64087/jars/spark-sql-kafka-0-10_2.12-3.1.3.jar, spark://AKDGPORT11191.mshome.net:64087/jars/mssql-jdbc-10.2.1.jre8.jar, spark://AKDGPORT11191.mshome.net:64087/jars/spark-tags_2.12-3.1.3.jar, spark://AKDGPORT11191.mshome.net:64087/jars/spark-token-provider-kafka-0-10_2.12-3.1.3.jar)\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(spark._jsc.sc().listJars())"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "start_time": "2023-05-16T21:02:44.144953Z",
+     "end_time": "2023-05-16T21:02:44.306842Z"
     }
    }
   },
@@ -116,7 +139,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 7,
+   "outputs": [],
+   "source": [
+    "from pyspark.sql import functions as F\n",
+    "df = spark \\\n",
+    "      .readStream \\\n",
+    "      .format(\"kafka\") \\\n",
+    "      .option(\"kafka.bootstrap.servers\", \"AKDGPORT11191.mshome.net:29092\" ) \\\n",
+    "      .option(\"subscribe\", \"demo\") \\\n",
+    "      .load()"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "start_time": "2023-05-16T21:03:42.970023Z",
+     "end_time": "2023-05-16T21:03:43.191855Z"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
    "outputs": [
     {
      "name": "stdout",
@@ -145,21 +189,14 @@
     },
     {
      "data": {
-      "text/plain": "<pyspark.sql.streaming.StreamingQuery at 0x2357ede05e0>"
+      "text/plain": "<pyspark.sql.streaming.StreamingQuery at 0x1f792d13a60>"
      },
-     "execution_count": 4,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "from pyspark.sql import functions as F\n",
-    "df = spark \\\n",
-    "      .readStream \\\n",
-    "      .format(\"kafka\") \\\n",
-    "      .option(\"kafka.bootstrap.servers\", \"localhost:29092\" ) \\\n",
-    "      .option(\"subscribe\", \"demo\") \\\n",
-    "      .load()\n",
     "df.printSchema()\n",
     "#df.writeStream.format(\"console\").outputMode(\"update\").option(\"checkpointLocation\",\".\\checkpoints\").start(\"kafkaTest\")\n",
     "inter = df.selectExpr(\"json_tuple(CAST(value as STRING), 'timestamp', 'key', 'value')\")\n",
@@ -174,11 +211,7 @@
     "#{\"timestamp\":[2022,10,5,17,26,17,470412000],\"key\":\"Fish\",\"value\":1}"
    ],
    "metadata": {
-    "collapsed": false,
-    "ExecuteTime": {
-     "start_time": "2023-04-26T16:49:32.077941Z",
-     "end_time": "2023-04-26T16:49:35.863000Z"
-    }
+    "collapsed": false
    }
   },
   {
