Added exercises Installationsteps reduced

--- a/04_00_CHECK_jdbcConnection.ipynb
+++ b/04_00_CHECK_jdbcConnection.ipynb
@@ -6,8 +6,8 @@
    "metadata": {
     "collapsed": true,
     "ExecuteTime": {
-     "start_time": "2023-04-25T11:37:28.724517Z",
-     "end_time": "2023-04-25T11:37:29.509517Z"
+     "start_time": "2023-06-12T15:56:17.901227Z",
+     "end_time": "2023-06-12T15:56:20.297448Z"
     }
    },
    "outputs": [],
@@ -16,6 +16,23 @@
     "from pyspark.sql import SparkSession\n",
     "import ConnectionConfig as cc"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "outputs": [],
+   "source": [
+    "\n",
+    "import EnvironmentSetup\n",
+    "EnvironmentSetup.setupEnvironment()"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "start_time": "2023-06-12T15:57:45.593856Z",
+     "end_time": "2023-06-12T15:57:46.183165Z"
+    }
+   }
   },
   {
    "cell_type": "markdown",
@@ -49,14 +66,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "outputs": [
     {
      "data": {
-      "text/plain": "<pyspark.sql.session.SparkSession at 0x24d7fd506d0>",
-      "text/html": "\n            <div>\n                <p><b>SparkSession - in-memory</b></p>\n                \n        <div>\n            <p><b>SparkContext</b></p>\n\n            <p><a href=\"http://AKDGPORT11191.mshome.net:4040\">Spark UI</a></p>\n\n            <dl>\n              <dt>Version</dt>\n                <dd><code>v3.3.2</code></dd>\n              <dt>Master</dt>\n                <dd><code>local[4]</code></dd>\n              <dt>AppName</dt>\n                <dd><code>DBConnectionTest</code></dd>\n            </dl>\n        </div>\n        \n            </div>\n        "
+      "text/plain": "<pyspark.sql.session.SparkSession at 0x2049f1c3d60>",
+      "text/html": "\n            <div>\n                <p><b>SparkSession - in-memory</b></p>\n                \n        <div>\n            <p><b>SparkContext</b></p>\n\n            <p><a href=\"http://host.docker.internal:4040\">Spark UI</a></p>\n\n            <dl>\n              <dt>Version</dt>\n                <dd><code>v3.4.0</code></dd>\n              <dt>Master</dt>\n                <dd><code>local[4]</code></dd>\n              <dt>AppName</dt>\n                <dd><code>DBConnectionTest</code></dd>\n            </dl>\n        </div>\n        \n            </div>\n        "
      },
-     "execution_count": 2,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -68,18 +85,20 @@
     "    .appName(\"DBConnectionTest\") \\\n",
     "    .config(\"spark.sql.extensions\", \"io.delta.sql.DeltaSparkSessionExtension\") \\\n",
     "    .config(\"spark.sql.catalog.spark_catalog\", \"org.apache.spark.sql.delta.catalog.DeltaCatalog\") \\\n",
-    "    .config(\"spark.driver.extraClassPath\", \"./jars/mssql-jdbc-10.2.1.jre8.jar\") \\\n",
     "    .master(\"local[4]\")\n",
     "#This one must be added to be able to query a jdbc source\n",
-    "builder = configure_spark_with_delta_pip(builder)\n",
+    "extra_packages = [\"org.apache.spark:spark-sql-kafka-0-10_2.12:3.1.2\",\"com.microsoft.sqlserver:mssql-jdbc:12.2.0.jre8\"]\n",
+    "\n",
+    "builder = configure_spark_with_delta_pip(builder, extra_packages=extra_packages)\n",
+    "\n",
     "spark = builder.getOrCreate()\n",
     "builder.getOrCreate()"
    ],
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "start_time": "2023-04-25T11:37:29.512519Z",
-     "end_time": "2023-04-25T11:38:11.510380Z"
+     "start_time": "2023-06-12T15:57:53.473909Z",
+     "end_time": "2023-06-12T15:58:32.838858Z"
     }
    }
   },
@@ -107,6 +126,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "jdbc:sqlserver://localhost:1433;database=tutorial_op;encrypt=true;trustServerCertificate=true\n",
       "+-------------------+--------------------+----------+----------+--------+\n",
       "|         Order_Date|       Customer_Name|SalesRepId|    Amount|Order_ID|\n",
       "+-------------------+--------------------+----------+----------+--------+\n",
@@ -1116,10 +1136,11 @@
     }
    ],
    "source": [
-    "cc.set_connection(\"mydb\")\n",
-    "\n",
+    "cc.set_connection(\"tutorial_op\")\n",
+    "print(cc.create_jdbc())\n",
     "sales_df = spark.read \\\n",
     "    .format(\"jdbc\") \\\n",
+    "    .option(\"driver\" , \"com.microsoft.sqlserver.jdbc.SQLServerDriver\") \\\n",
     "    .option(\"url\", cc.create_jdbc()) \\\n",
     "    .option(\"dbtable\", \"dbo.sales\") \\\n",
     "    .option(\"user\", cc.get_Property(\"username\")) \\\n",
@@ -1134,8 +1155,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "start_time": "2023-04-25T11:42:24.106294Z",
-     "end_time": "2023-04-25T11:42:41.284061Z"
+     "start_time": "2023-06-12T15:58:45.136815Z",
+     "end_time": "2023-06-12T15:58:54.234403Z"
     }
    }
   },
@@ -1149,8 +1170,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "start_time": "2023-04-25T11:42:44.779931Z",
-     "end_time": "2023-04-25T11:42:45.529928Z"
+     "start_time": "2023-06-12T15:58:57.805668Z",
+     "end_time": "2023-06-12T15:58:58.094662Z"
     }
    }
   },
