--- a/05_1_DWH_dimDate.ipynb
+++ b/05_1_DWH_dimDate.ipynb
@@ -12,15 +12,17 @@
    "execution_count": 1,
    "metadata": {
     "ExecuteTime": {
-     "start_time": "2023-04-25T11:58:48.711822Z",
-     "end_time": "2023-04-25T11:58:49.179998Z"
+     "start_time": "2023-06-13T10:16:08.247821Z",
+     "end_time": "2023-06-13T10:16:09.074878Z"
     }
    },
    "outputs": [],
    "source": [
     "\n",
     "from pyspark.sql import SparkSession\n",
-    "\n"
+    "from delta import configure_spark_with_delta_pip\n",
+    "import EnvironmentSetup as es\n",
+    "es.setupEnvironment()\n"
    ]
   },
   {
@@ -37,15 +39,15 @@
    "execution_count": 2,
    "metadata": {
     "ExecuteTime": {
-     "start_time": "2023-04-25T11:58:49.184000Z",
-     "end_time": "2023-04-25T11:59:04.528024Z"
+     "start_time": "2023-06-13T10:16:20.096058Z",
+     "end_time": "2023-06-13T10:17:04.978621Z"
     }
    },
    "outputs": [
     {
      "data": {
-      "text/plain": "<pyspark.sql.session.SparkSession at 0x19a5a11dd60>",
-      "text/html": "\n            <div>\n                <p><b>SparkSession - in-memory</b></p>\n                \n        <div>\n            <p><b>SparkContext</b></p>\n\n            <p><a href=\"http://AKDGPORT11191.mshome.net:4040\">Spark UI</a></p>\n\n            <dl>\n              <dt>Version</dt>\n                <dd><code>v3.3.2</code></dd>\n              <dt>Master</dt>\n                <dd><code>local[*]</code></dd>\n              <dt>AppName</dt>\n                <dd><code>DimDate</code></dd>\n            </dl>\n        </div>\n        \n            </div>\n        "
+      "text/plain": "<pyspark.sql.session.SparkSession at 0x178b9284ac0>",
+      "text/html": "\n            <div>\n                <p><b>SparkSession - in-memory</b></p>\n                \n        <div>\n            <p><b>SparkContext</b></p>\n\n            <p><a href=\"http://AKDGPORT11191.admin.kdg.be:4040\">Spark UI</a></p>\n\n            <dl>\n              <dt>Version</dt>\n                <dd><code>v3.4.0</code></dd>\n              <dt>Master</dt>\n                <dd><code>local[*]</code></dd>\n              <dt>AppName</dt>\n                <dd><code>DimDate</code></dd>\n            </dl>\n        </div>\n        \n            </div>\n        "
      },
      "execution_count": 2,
      "metadata": {},
@@ -53,7 +55,6 @@
     }
    ],
    "source": [
-    "from delta import configure_spark_with_delta_pip\n",
     "\n",
     "builder = SparkSession.builder \\\n",
     "    .appName(\"DimDate\") \\\n",
@@ -81,11 +82,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "metadata": {
     "ExecuteTime": {
-     "start_time": "2023-04-25T11:59:04.533025Z",
-     "end_time": "2023-04-25T11:59:12.165685Z"
+     "start_time": "2023-06-13T15:39:26.578110Z",
+     "end_time": "2023-06-13T15:39:28.941735Z"
     }
    },
    "outputs": [
@@ -131,6 +132,7 @@
     "df_SQL = spark.sql(f\"select explode(sequence(to_date('{beginDate}'), to_date('{endDate}'), interval 1 day)) as calendarDate\") \\\n",
     ".withColumn(\"dateSK\", monotonically_increasing_id())\n",
     "\n",
+    "\n",
     "df_SQL.createOrReplaceTempView('neededDates' )\n",
     "\n",
     "spark.sql(\"select * from neededDates\").show()"
@@ -171,11 +173,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "metadata": {
     "ExecuteTime": {
-     "start_time": "2023-04-25T11:59:12.160690Z",
-     "end_time": "2023-04-25T11:59:13.654803Z"
+     "start_time": "2023-06-13T15:39:38.345897Z",
+     "end_time": "2023-06-13T15:39:39.047166Z"
     }
    },
    "outputs": [
@@ -336,11 +338,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {
     "ExecuteTime": {
-     "start_time": "2023-04-25T11:59:14.212339Z",
-     "end_time": "2023-04-25T11:59:30.004563Z"
+     "start_time": "2023-06-13T15:41:16.089804Z",
+     "end_time": "2023-06-13T15:41:36.825458Z"
     }
    },
    "outputs": [],
