--- a/05_2_DWH_dimSalesRep_Initial.ipynb
+++ b/05_2_DWH_dimSalesRep_Initial.ipynb
@@ -6,10 +6,7 @@
     "### Config stuff"
    ],
    "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%% md\n"
-    }
+    "collapsed": false
    }
   },
   {
@@ -26,8 +23,9 @@
    ],
    "metadata": {
     "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
+    "ExecuteTime": {
+     "start_time": "2023-06-13T15:42:03.292477Z",
+     "end_time": "2023-06-13T15:42:04.047379Z"
     }
    }
   },
@@ -60,10 +58,7 @@
     "builder.getOrCreate()"
    ],
    "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
+    "collapsed": false
    }
   },
   {
@@ -86,10 +81,7 @@
     "\n"
    ],
    "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%% md\n"
-    }
+    "collapsed": false
    }
   },
   {
@@ -160,10 +152,7 @@
     "#spark.sql(\"ALTER TABLE dimSalesRep  ADD columns (salesRepSK long GENERATED ALWAYS AS IDENTITY (START WITH 0 INCREMENT BY 1)\")"
    ],
    "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
+    "collapsed": false
    }
   },
   {
@@ -173,10 +162,7 @@
     "* The function md5() performs a md5-hash function on the preferred columns. This is needed to detect changes in the incremental load notebook."
    ],
    "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%% md\n"
-    }
+    "collapsed": false
    }
   },
   {
@@ -187,10 +173,7 @@
     "spark.stop()"
    ],
    "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
+    "collapsed": false
    }
   }
  ],
