Added hadoop archive

--- a/01_0_EXAMPLE_1_sparkBasics.ipynb
+++ b/01_0_EXAMPLE_1_sparkBasics.ipynb
@@ -24,8 +24,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "start_time": "2023-06-13T09:14:03.301434Z",
-     "end_time": "2023-06-13T09:14:03.690468Z"
+     "start_time": "2023-06-23T11:18:33.896071Z",
+     "end_time": "2023-06-23T11:18:34.294474Z"
     }
    }
   },
@@ -51,7 +51,7 @@
    "outputs": [
     {
      "data": {
-      "text/plain": "'http://AKDGPORT11191.admin.kdg.be:4040'"
+      "text/plain": "'http://AKDGPORT11191.admin.kdg.be:4042'"
      },
      "execution_count": 2,
      "metadata": {},
@@ -74,8 +74,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "start_time": "2023-06-13T09:14:06.127312Z",
-     "end_time": "2023-06-13T09:14:42.217162Z"
+     "start_time": "2023-06-23T11:18:53.262975Z",
+     "end_time": "2023-06-23T11:19:20.467359Z"
     }
    }
   },
@@ -108,14 +108,6 @@
    "execution_count": 4,
    "outputs": [
     {
-     "data": {
-      "text/plain": "PythonRDD[18] at RDD at PythonRDD.scala:53"
-     },
-     "execution_count": 4,
-     "metadata": {},
-     "output_type": "execute_result"
-    },
-    {
      "name": "stdout",
      "output_type": "stream",
      "text": [
@@ -136,19 +128,18 @@
     "#4. In this transformations an aggregation by key is performed. Every word is counted. Because records with the same key ar spread over the cluster, a shuffle is needed (e.g. all records with key \"romeo\" will be sent to one node). The execution engine will start a new stage for this step because of the shuffle.\n",
     "\n",
     "wordCounts = wordKv.reduceByKey(lambda a,b:a +b)\n",
-    "\n",
     "#5. This step is not necessary but will cache the result to memory.\n",
     "# This is more efficient if the wordCounts dataframe is needed for more new dataframes to avoid that Spark recalculates everything from the beginning for each chain.\n",
     "wordCounts.cache()\n",
-    "\n",
     "# 6. Save the counts to output. As this is an action, the Spark execution engine will only now decide that all the preceding transformations do need to be executed.\n",
-    "print(wordCounts.saveAsTextFile(\"./output/words\" + datetime.datetime.now().strftime(\"%m%d%Y%H%M%S\")))"
+    "print(wordCounts.saveAsTextFile(\"./output/words\" + datetime.datetime.now().strftime(\"%m%d%Y%H%M%S\")))\n",
+    "print(wc2.saveAsTextFile(\"./output/words2\" + datetime.datetime.now().strftime(\"%m%d%Y%H%M%S\")))"
    ],
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "start_time": "2023-06-13T10:03:43.367774Z",
-     "end_time": "2023-06-13T10:03:56.202313Z"
+     "start_time": "2023-06-23T11:22:36.394584Z",
+     "end_time": "2023-06-23T11:22:43.550734Z"
     }
    }
   },
@@ -207,8 +198,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "start_time": "2023-06-13T10:16:07.723880Z",
-     "end_time": "2023-06-13T10:16:08.335765Z"
+     "start_time": "2023-06-23T11:43:02.721797Z",
+     "end_time": "2023-06-23T11:43:03.451867Z"
     }
    }
   },
